Fixing the header nav bar to be dynamically sized no overlaps or underlines

--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,15 @@ header {
     justify-content: center;
     align-items: center;
     position: relative;
+    flex-wrap: wrap;
 }
 
 header h1 {
     margin:0; /*Removes default h1 margin*/
-    position: absolute;
-    left: 50px;
+    flex: 1;    
+    text-align: left;
+    font-size: 1.8rem;
+    white-space: nowrap;
 }
 
 header h1 a{
@@ -29,19 +32,27 @@ header h1 a{
     text-decoration: none;
 }
 
+nav {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+}
+
 nav ul {
-    list-style: none;
-    gap: 20px;
-    padding: 0px;
-    margin: 0px;
-    display: flex;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 nav ul li a:hover{
